--- a/src/Countdown/CountdownResults.scss
+++ b/src/Countdown/CountdownResults.scss
@@ -1,12 +1,14 @@
 .tab-countdown__result {
   width: 600px;
+  text-align: center;
 }
 
 .tab-countdown__timer {
   font-size: 28px;
   color: #00CED1;
-  width: 100px;
-  display: flex;
+  min-width: 170px;
+  padding: 10px;
+  display: inline-flex;
   justify-content: center;
   margin: 10px auto;
   border: 2px solid #aedada;
